@@ -16,5 +16,4 @@ def test_main():
     support.run_unittest(__name__)
 
 if __name__ == "__main__":
-    support.use_resources = ['urlfetch']
     test_main()
