@@ -501,5 +501,4 @@ def load_tests(*args):
 
 
 if __name__ == "__main__":
-    support.use_resources = ['network']
     unittest.main()
