@@ -22,13 +22,7 @@ except TclError as msg:
     # assuming ttk is not available
     raise unittest.SkipTest("ttk not available: %s" % msg)
 
-def test_main(enable_gui=False):
-    if enable_gui:
-        if support.use_resources is None:
-            support.use_resources = ['gui']
-        elif 'gui' not in support.use_resources:
-            support.use_resources.append('gui')
-
+def test_main():
     try:
         support.run_unittest(
                 *runtktests.get_tests(text=False, packages=['test_ttk']))
@@ -36,4 +30,4 @@ def test_main(enable_gui=False):
         get_tk_root().destroy()
 
 if __name__ == '__main__':
-    test_main(enable_gui=True)
+    test_main()
