@@ -66,6 +66,9 @@ Build
 Tests
 -----
 
+- Issue #18492: All resources are now allowed when tests are not run by
+  regrtest.py.
+
 - Issue #21634: Fix pystone micro-benchmark: use floor division instead of true
   division to benchmark integers instead of floating point numbers. Set pystone
   version to 1.2. Patch written by Lennart Regebro.
